2008-02-06  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs,
	  Makefile.am, MonoDevelop.SourceEditor.mdp,
	  MonoDevelop.SourceEditor/SourceEditorView.cs: Worked on printing

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs: Added some folding
	  commands.

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs: Improved folding behavior.

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.addin.xml: Worked on text editor context menu.

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.addin.xml,
	  MonoDevelop.SourceEditor/SourceEditorView.cs: Converted
	  comment/uncomment to the more common toggle comment logic.

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: #region ... #endregion is
	  now folded per default.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.OptionPanels/HighlightingPanel.cs: Fixed
	  highlighting panel.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorOptions.cs: Implemented bracket
	  matching.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
	  MonoDevelop.SourceEditor/EditActions.cs: Bug 354129 - Auto add second
	  brackets, quotation mark

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Implemented Bug 323946 -
	  Undo/Redo functionality are not context sensitive.

2008-02-03  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed reload bug.

2008-02-03  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Filtered out body less